[package]
name = "lnurl-pay"
version = "0.2.1"
edition = "2021"
description = "LNURL Pay"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/shadowylab/lnrul-pay"
repository = "https://github.com/shadowylab/lnrul-pay.git"
license = "MIT"
readme = "README.md"
rust-version = "1.64.0"

[features]
default = ["std"]
std = ["bech32/std", "serde/std", "serde_json/std"]
api = ["std", "dep:reqwest"]

[dependencies]
bech32 = { version = "0.9", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "socks"], optional = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
